# mlispc

mlispc/: dune-project
mlispc/lib/: ast.ml  dune  lexer.mll  parse.ml  parser.mly
mlispc/lib/bytecode/: bcast.ml  common.ml  env.ml  frame.ml  generate.ml  value.ml
mlispc/test/: dune
mlisprun/lib/: ast.ml  common.ml  dune  env.ml  eval.ml  lexer.mll  op.ml  parse.ml  parser.mly  table.ml  value.ml  value.mli
