(menhir
 (modules parser))

(ocamllex lexer)

(include_subdirs qualified)

(library
 (name mlispc)
 (libraries core fmt mlisprun)
 ;(modules
 ;(:standard \ generate))
 (inline_tests)
 (preprocess
  (pps
   ppx_deriving.show
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_let
   ppx_expect
   ppx_sexp_conv)))
